# file_uploads_using_multi_threads

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml  docker-compose.yml
migrations/2024-09-11-123015_create_files_table/: up.sql
src/: main.rs  schema.rs
src/models/: file_upload.rs  mod.rs  post.rs
src/services/: file_upload.rs  mod.rs  post.rs
templates/: files.html.hbs
